Added weekly forecast and encased in collapsible section, refactored files moving script out of head into seperate file

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -15,8 +15,10 @@
 	content: attr(data-icon);
 }
 
-.content {
+.ui-content {
 	text-align: center;
+	background-color: #5B80B5;
+	color: #fff;
 }
 
 #current_temp {
